--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
         <!-- Header -->
         <div class="flex items-center bg-white p-4 rounded-xl shadow-md mb-6">
             <div class="flex-shrink-0">
-                <!-- IMPORTANT: Replace this placeholder with the path to your MUST.png logo -->
-                <img src="https://placehold.co/100x100/1e3c72/ffffff?text=MUST" alt="MUST Logo" class="h-24 w-24 object-contain" />
+                <img src="MUST.png" alt="MUST Logo" class="h-24 w-24 object-contain" />
             </div>
             <div class="ml-6 flex-grow">
                 <h1 class="text-2xl md:text-3xl font-bold" style="color: #1e3c72;">Misr University for Science and Technology</h1>
@@ -110,7 +109,7 @@
 
     <script>
         // --- CONFIGURATION ---
-        const GOOGLE_SHEET_CSV_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vTTAvVKy59t4ZTV_GQPKQbUS-tchpK9OugsPXL41ScMQXsA1pDh467cksdR32pct8_bjgpOJ4NpgrZA/pub?gid=1650908958&single=true&output=csv';
+        const GOOGLE_SHEET_CSV_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vTTAvVKy59t4ZTV_GQPKQbUS-tchpK9OugsPXL41ScMQXsA1pDh467cksdR32pct8_bjgpOJ4NpgrZA/pub?gid=1650908858&single=true&output=csv';
 
         // --- DOM ELEMENTS ---
         const studentIdInput = document.getElementById('studentIdInput');
