--- a/index.html
+++ b/index.html
@@ -50,16 +50,44 @@
         <div class="w-full bg-white rounded-xl shadow-lg p-6 md:p-8">
             <header class="text-center mb-6">
                 <h1 class="text-3xl font-bold text-gray-800">Student Portal</h1>
-                <p class="text-gray-500 mt-2">Enter your Student ID to view your detailed attendance and marks.</p>
+                <p class="text-gray-500 mt-2">Select a section and enter a Student ID to view attendance and marks.</p>
             </header>
 
             <main>
                 <!-- Search Input -->
-                <div class="relative max-w-lg mx-auto">
-                    <input type="text" id="studentIdInput" placeholder="Enter your Student ID" class="w-full px-4 py-3 text-lg bg-gray-50 border-2 border-gray-200 rounded-lg focus:outline-none focus:border-blue-500 transition-colors">
-                    <button id="searchButton" class="absolute right-2 top-1/2 -translate-y-1/2 bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50 transition-colors">
-                        Search
-                    </button>
+                <div class="max-w-lg mx-auto flex flex-col sm:flex-row gap-4">
+                    <div class="flex-shrink-0">
+                        <label for="sectionSelector" class="sr-only">Select Section</label>
+                        <select id="sectionSelector" class="w-full sm:w-auto h-full px-4 py-3 text-lg bg-gray-50 border-2 border-gray-200 rounded-lg focus:outline-none focus:border-blue-500 transition-colors">
+                            <option value="All">All Sections</option>
+                            <option value="A">Section A</option>
+                            <option value="B">Section B</option>
+                            <option value="C">Section C</option>
+                            <option value="D">Section D</option>
+                            <option value="E">Section E</option>
+                            <option value="F">Section F</option>
+                            <option value="G">Section G</option>
+                            <option value="H">Section H</option>
+                            <option value="I">Section I</option>
+                            <option value="J">Section J</option>
+                            <option value="K">Section K</option>
+                            <option value="L">Section L</option>
+                            <option value="M">Section M</option>
+                            <option value="N">Section N</option>
+                            <option value="O">Section O</option>
+                            <option value="P">Section P</option>
+                            <option value="Q">Section Q</option>
+                            <option value="R">Section R</option>
+                            <option value="S">Section S</option>
+                            <option value="T">Section T</option>
+                        </select>
+                    </div>
+                    <div class="relative flex-grow">
+                        <input type="text" id="studentIdInput" placeholder="Enter Student ID" class="w-full px-4 py-3 text-lg bg-gray-50 border-2 border-gray-200 rounded-lg focus:outline-none focus:border-blue-500 transition-colors">
+                        <button id="searchButton" class="absolute right-2 top-1/2 -translate-y-1/2 bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50 transition-colors">
+                            Search
+                        </button>
+                    </div>
                 </div>
 
                 <!-- Loading Spinner -->
@@ -90,11 +118,37 @@
 
     <script>
         // --- CONFIGURATION ---
-        const GOOGLE_SHEET_CSV_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vTTAvVKy59t4ZTV_GQPKQbUS-tchpK9OugsPXL41ScMQXsA1pDh467cksdR32pct8_bjgpOJ4NpgrZA/pub?gid=1650908958&single=true&output=csv';
+        const GOOGLE_SHEET_BASE_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vTTAvVKy59t4ZTV_GQPKQbUS-tchpK9OugsPXL41ScMQXsA1pDh467cksdR32pct8_bjgpOJ4NpgrZA/pub?output=csv&single=true';
+
+        // GIDs for each section sheet
+        const SECTION_GIDS = {
+            'All': '1650908958',
+            'A': '1620275840',
+            'B': '1661871665',
+            'C': '804746623',
+            'D': '1998860796',
+            'E': '1432194061',
+            'F': '1174976610',
+            'G': '630589668',
+            'H': '340172703',
+            'I': '1823887500',
+            'J': '1811748047',
+            'K': '289568000',
+            'L': '1058769797',
+            'M': '672465296',
+            'N': '2018867860',
+            'O': '2510390',
+            'P': '1022038284',
+            'Q': '747459593',
+            'R': '1912599889',
+            'S': '554652905',
+            'T': '1568050738'
+        };
 
         // --- DOM ELEMENTS ---
         const studentIdInput = document.getElementById('studentIdInput');
         const searchButton = document.getElementById('searchButton');
+        const sectionSelector = document.getElementById('sectionSelector');
         const resultsDiv = document.getElementById('results');
         const loadingDiv = document.getElementById('loading');
         const errorDiv = document.getElementById('error');
@@ -102,19 +156,22 @@
         let studentData = [];
 
         // --- FUNCTIONS ---
-        async function fetchData() {
+        async function fetchData(section) {
             loadingDiv.classList.remove('hidden');
             errorDiv.classList.add('hidden');
             resultsDiv.innerHTML = '';
 
-            if (GOOGLE_SHEET_CSV_URL === 'PASTE_YOUR_NEW_GOOGLE_SHEET_CSV_URL_HERE') {
-                showError('Please update the Google Sheet URL in the HTML file.');
+            const gid = SECTION_GIDS[section];
+            if (!gid || gid.startsWith('REPLACE_WITH')) {
+                showError(`The GID for Section ${section} is not configured.`);
                 loadingDiv.classList.add('hidden');
                 return;
             }
 
+            const fetchUrl = `${GOOGLE_SHEET_BASE_URL}&gid=${gid}`;
+
             try {
-                const response = await fetch(GOOGLE_SHEET_CSV_URL);
+                const response = await fetch(fetchUrl);
                 if (!response.ok) throw new Error(`Network error: ${response.statusText}`);
                 const csvText = await response.text();
                 studentData = parseComplexCSV(csvText);
@@ -167,22 +224,27 @@
 
         async function findAndDisplayStudent() {
             const searchId = studentIdInput.value.trim();
+            const selectedSection = sectionSelector.value;
+
             if (!searchId) {
                 resultsDiv.innerHTML = '';
                 showError('Please enter a Student ID.');
                 return;
             }
-            await fetchData();
+
+            await fetchData(selectedSection);
+
             if (studentData.length === 0 && !errorDiv.textContent) {
-                showError('No student data was loaded. Please check the spreadsheet format.');
+                showError('No student data was loaded. Please check the spreadsheet format and GID configuration.');
                 return;
             };
+
             const student = studentData.find(s => s['Id'] === searchId);
             if (student) {
                 displayStudentInfo(student);
             } else {
                 if (!errorDiv.textContent) {
-                    showError(`No record found for Student ID: ${searchId}`);
+                    showError(`No record found for Student ID: ${searchId} in Section ${selectedSection}`);
                 }
             }
         }
