--- a/index.html
+++ b/index.html
@@ -315,20 +315,41 @@
             
             const totalScore = parseFloat(student['Total']);
             const maxScore = 10;
-            let progressBarHtml = '';
+            let circularProgressBarHtml = '';
             let scoreColorClass = 'text-gray-700';
-            let progressBarColorClass = 'bg-gray-400';
+            let progressBarColorClass = 'text-gray-400';
 
             if (!isNaN(totalScore)) {
-                if (totalScore >= 9) { scoreColorClass = 'text-green-700'; progressBarColorClass = 'bg-green-700'; } 
-                else if (totalScore >= 7) { scoreColorClass = 'text-green-500'; progressBarColorClass = 'bg-green-500'; } 
-                else if (totalScore >= 5) { scoreColorClass = 'text-yellow-500'; progressBarColorClass = 'bg-yellow-500'; } 
-                else if (totalScore >= 3) { scoreColorClass = 'text-orange-500'; progressBarColorClass = 'bg-orange-500'; } 
-                else { scoreColorClass = 'text-red-600'; progressBarColorClass = 'bg-red-600'; }
+                if (totalScore >= 9) { scoreColorClass = 'text-green-600'; progressBarColorClass = 'text-green-600'; } 
+                else if (totalScore >= 7) { scoreColorClass = 'text-lime-500'; progressBarColorClass = 'text-lime-500'; } 
+                else if (totalScore >= 5) { scoreColorClass = 'text-yellow-400'; progressBarColorClass = 'text-yellow-400'; } 
+                else if (totalScore >= 3) { scoreColorClass = 'text-orange-500'; progressBarColorClass = 'text-orange-500'; } 
+                else { scoreColorClass = 'text-red-600'; progressBarColorClass = 'text-red-600'; }
+                
                 const progressPercentage = Math.min((totalScore / maxScore) * 100, 100);
-                progressBarHtml = `
-                    <div class="w-full bg-gray-200 rounded-full h-2.5 mt-2">
-                        <div class="${progressBarColorClass} h-2.5 rounded-full" style="width: ${progressPercentage}%"></div>
+                const radius = 40;
+                const circumference = 2 * Math.PI * radius;
+                const offset = circumference - (progressPercentage / 100) * circumference;
+
+                circularProgressBarHtml = `
+                    <div class="relative w-32 h-32 mt-2">
+                        <svg class="w-full h-full" viewBox="0 0 100 100">
+                            <!-- Background circle -->
+                            <circle class="text-gray-200" stroke-width="10" stroke="currentColor" fill="transparent" r="${radius}" cx="50" cy="50"/>
+                            <!-- Progress circle -->
+                            <circle class="${progressBarColorClass}" stroke-width="10" stroke-linecap="round" stroke="currentColor" fill="transparent" r="${radius}" cx="50" cy="50"
+                                    style="stroke-dasharray: ${circumference}; stroke-dashoffset: ${offset}; transition: stroke-dashoffset 0.5s ease 0s; transform: rotate(-90deg); transform-origin: 50% 50%;" />
+                        </svg>
+                        <div class="absolute inset-0 flex flex-col items-center justify-center">
+                            <span class="text-3xl font-bold ${scoreColorClass}">${student['Total'] || 'N/A'}</span>
+                            <span class="text-sm text-gray-500">/ ${maxScore}</span>
+                        </div>
+                    </div>
+                `;
+            } else {
+                 circularProgressBarHtml = `
+                    <div class="relative w-32 h-32 mt-2 flex flex-col items-center justify-center">
+                         <span class="text-3xl font-bold text-gray-700">${student['Total'] || 'N/A'}</span>
                     </div>
                 `;
             }
@@ -341,10 +362,9 @@
                             <p class="text-gray-500">Student ID: ${student['Id']}</p>
                             <p class="text-gray-500 mt-1">Section: ${student['Section'] || 'N/A'}</p>
                         </div>
-                        <div class="w-full md:w-1/3">
+                        <div class="w-full md:w-1/3 flex flex-col items-center">
                             <p class="text-sm font-medium text-gray-500">Total Score</p>
-                            <p class="text-4xl font-bold ${scoreColorClass}">${student['Total'] || 'N/A'} / ${maxScore}</p>
-                            ${progressBarHtml}
+                            ${circularProgressBarHtml}
                         </div>
                     </div>
                     <h3 class="text-xl font-bold text-gray-700 mb-4 mt-6 pt-6 border-t">Experiments & Attendance</h3>
@@ -370,4 +390,7 @@
     </script>
 </body>
 </html>
+
+
+
 
