--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 <div id="resultsContainer" class="mt-6 hidden">
                     <!-- Tab Buttons -->
                     <div class="border-b border-gray-200 mb-4">
-                        <nav class="-mb-px flex gap-6" aria-label="Tabs">
+                        <nav class="-mb-px flex flex-wrap justify-center gap-4 sm:gap-6" aria-label="Tabs">
                             <button id="tabAttendance" class="tab-button active">
                                 <svg class="h-5 w-5 pendulum-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <defs>
@@ -463,6 +463,7 @@
     </script>
 </body>
 </html>
+
 
 
 
