Reset touch coordinates in touch event handler
Reset touch coordinates after handling touch events.

--- a/index.html
+++ b/index.html
@@ -269,6 +269,9 @@
                     hideDetailPage();
                 }
             }
+            // Reset coordinates
+            touchstartX = 0;
+            touchendX = 0;
         }
 
         // --- FETCH & PARSE FUNCTIONS ---
