--- a/index.html
+++ b/index.html
@@ -490,16 +490,22 @@
             const labScoreCircle = attendanceStudent ? createCircularProgressBar(labScore, 10, labScore, 'Lab Score') : createCircularProgressBar(0, 10, 'N/A', 'Lab Score');
             const practicalCircle = caStudent ? createCircularProgressBar(practicalScore, 20, practicalScore, 'Final Practical') : createCircularProgressBar(0, 20, 'N/A', 'Final Practical');
             
-            const totalScoreHtml = caStudent ? `<p class="text-4xl font-bold text-indigo-600">${totalScore} / 70</p>` : '';
-            const rankHtml = caStudent ? `<p class="text-lg font-semibold text-gray-600 flex items-center justify-center gap-2"><svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-yellow-400" viewBox="0 0 20 20" fill="currentColor"><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" /></svg>Rank: <span class="text-2xl text-amber-500">${rank}</span></p>` : '';
+            const totalScoreHtml = caStudent ? `<div class="text-3xl sm:text-4xl font-bold text-indigo-600 whitespace-nowrap px-4 py-2">${totalScore} / 70</div>` : '';
+            const rankHtml = caStudent ? `<div class="text-base sm:text-lg font-semibold text-gray-600 flex items-center justify-center gap-2 px-4 py-2"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 sm:h-6 sm:w-6 text-yellow-400 flex-shrink-0" viewBox="0 0 20 20" fill="currentColor"><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" /></svg><span class="whitespace-nowrap">Rank: <span class="text-xl sm:text-2xl text-amber-500">${rank}</span></span></div>` : '';
 
             const mainBoardHtml = `
-                <div class="mb-4 text-center">
+                <div class="mb-4 text-center md:text-left">
                     <h2 class="text-2xl font-bold text-gray-800">${studentName}</h2>
                     <p class="text-gray-500">Student ID: ${studentId}</p>
                     <p class="text-gray-500 mt-1">Section: ${studentSection || 'N/A'}</p>
                 </div>
-                <div class="text-center mb-6 pt-6 border-t"><h3 class="text-xl font-bold text-gray-700">Total Score & Rank</h3><div class="flex flex-wrap items-center justify-center gap-4 sm:gap-8 mt-2">${totalScoreHtml}${rankHtml}</div></div>
+                <div class="text-center mb-6 pt-6 border-t">
+                    <h3 class="text-xl font-bold text-gray-700 mb-3">Total Score & Rank</h3>
+                    <div class="flex flex-col sm:flex-row items-center justify-center gap-4 sm:gap-8 mt-2 px-2">
+                        ${totalScoreHtml}
+                        ${rankHtml}
+                    </div>
+                </div>
                 <h3 class="text-xl font-bold text-gray-700 mb-4 mt-6 pt-6 border-t text-center">Main Grades</h3>
                 <div class="grid grid-cols-1 sm:grid-cols-3 gap-4">
                     <div id="quizzesCardTrigger" class="bg-gray-50 p-4 rounded-lg shadow-sm border border-gray-200 flex flex-col items-center card-hover-effect ${caStudent ? 'cursor-pointer' : 'opacity-50'}">
