--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
             const practicalCircle = caStudent ? createCircularProgressBar(practicalScore, 20, practicalScore, 'Final Practical') : createCircularProgressBar(0, 20, 'N/A', 'Final Practical');
             
             const totalScoreDisplay = totalScore !== 'N/A' ? totalScore : 'N/A';
-            const totalScoreHtml = `<p class="text-3xl sm:text-4xl font-bold text-indigo-600 whitespace-nowrap px-4 py-2">${totalScoreDisplay} <span class="text-3xl sm:text-4xl text-red-500 font-bold">/ 70</span></p>`;
+            const totalScoreHtml = `<p class="text-3xl sm:text-4xl font-bold text-indigo-600 whitespace-nowrap px-4 py-2">${totalScoreDisplay} / 70</p>`;
             const rankHtml = caStudent ? `<p class="text-lg font-semibold text-gray-600 flex items-center justify-center gap-2"><svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-yellow-400" viewBox="0 0 20 20" fill="currentColor"><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" /></svg>Rank: <span class="text-2xl text-amber-500">${rank}</span></p>` : '';
 
             const mainBoardHtml = `
