--- a/index.html
+++ b/index.html
@@ -257,40 +257,48 @@
         </div>
     </div>
 
-    <!-- Practical Review Modal (New) -->
+    <!-- Practical Review Modal (Revised Layout for Mobile - Table View) -->
     <div id="practicalReviewModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center p-4 z-50 hidden font-arabic">
-        <div class="bg-white rounded-xl shadow-xl p-6 w-full max-w-md text-right fade-in relative overflow-hidden">
+        <div class="bg-white rounded-xl shadow-xl p-6 w-full max-w-md fade-in relative overflow-hidden">
             <!-- Decorative circle -->
             <div class="absolute -top-10 -left-10 w-24 h-24 bg-yellow-100 rounded-full blur-xl opacity-50"></div>
             
-            <h2 class="text-xl font-bold text-gray-800 mb-4 flex flex-row-reverse items-center justify-end gap-2 border-b pb-3">
-                 تنويه هام: مراجعة تصحيح العملي <span class="text-2xl">🔔</span>
-            </h2>
-            
-            <p class="text-gray-600 mb-5 leading-relaxed text-lg">
-                يمكنكم مراجعة وتدقيق تصحيح الجزء العملي من المقرر.
-            </p>
-
-            <div class="space-y-3 mb-6 bg-gray-50 p-4 rounded-lg border border-gray-100">
-                <div class="flex flex-row-reverse justify-between items-center">
-                    <span class="font-bold text-gray-700">:التجربة</span>
-                    <span class="text-gray-900 font-semibold dir-ltr" id="reviewExperiment"></span>
-                </div>
-                <div class="flex flex-row-reverse justify-between items-center">
-                    <span class="font-bold text-gray-700">:المعني بالمراجعة</span>
-                    <span class="text-gray-900 font-semibold" id="reviewName"></span>
-                </div>
-                <div class="flex flex-row-reverse justify-between items-center">
-                    <span class="font-bold text-gray-700">:المكان</span>
-                    <span class="text-gray-900 font-semibold" id="reviewLocation">معمل 304PH</span>
-                </div>
-                <div class="flex flex-row-reverse justify-between items-center">
-                    <span class="font-bold text-gray-700">:الموعد</span>
-                    <span class="text-gray-900 font-semibold" id="reviewDate"></span>
-                </div>
+            <!-- Header (Kept in Arabic as requested, only table changed) -->
+            <div class="flex flex-col items-center justify-center border-b pb-4 mb-4" dir="rtl">
+                 <div class="flex items-center gap-2 mb-2">
+                    <span class="text-3xl">🔔</span>
+                    <h2 class="text-lg sm:text-xl font-bold text-gray-800">تنويه هام: مراجعة تصحيح العملي</h2>
+                 </div>
+                 <p class="text-gray-600 text-center leading-relaxed text-sm sm:text-base">
+                    يمكنكم مراجعة وتدقيق تصحيح الجزء العملي من المقرر.
+                </p>
             </div>
 
-            <p class="text-sm text-red-500 font-medium mb-6 flex flex-row-reverse items-start gap-1">
+            <!-- Details Table (Table Layout - LTR & English Labels) -->
+            <div class="bg-gray-50 p-4 rounded-lg border border-gray-100 mb-6 overflow-hidden">
+                <table class="w-full text-left text-sm sm:text-base">
+                    <tbody>
+                        <tr class="border-b border-gray-200 last:border-0">
+                            <td class="py-2 font-bold text-gray-700 whitespace-nowrap pr-4 w-1/3">Experiment:</td>
+                            <td class="py-2 text-gray-900 font-semibold" id="reviewExperiment"></td>
+                        </tr>
+                        <tr class="border-b border-gray-200 last:border-0">
+                            <td class="py-2 font-bold text-gray-700 whitespace-nowrap pr-4">Reviewer:</td>
+                            <td class="py-2 text-gray-900 font-semibold" id="reviewName"></td>
+                        </tr>
+                        <tr class="border-b border-gray-200 last:border-0">
+                            <td class="py-2 font-bold text-gray-700 whitespace-nowrap pr-4">Location:</td>
+                            <td class="py-2 text-gray-900 font-semibold" id="reviewLocation">304 LB PH</td>
+                        </tr>
+                        <tr class="last:border-0">
+                            <td class="py-2 font-bold text-gray-700 whitespace-nowrap pr-4 align-top">Date:</td>
+                            <td class="py-2 text-gray-900 font-semibold leading-relaxed" id="reviewDate"></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+
+            <p class="text-xs sm:text-sm text-red-500 font-bold mb-6 text-center" dir="rtl">
                  ملاحظة: يرجى الحضور في الموعد المحدد لإنهاء عملية المراجعة.
             </p>
 
