Update review note with attendance policy

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
             </div>
 
             <p class="text-xs sm:text-sm text-red-500 font-bold mb-6 text-center" dir="rtl">
-                 ملاحظة: يرجى الحضور في الموعد المحدد لإنهاء عملية المراجعة.
+                 ملاحظة: يرجى الحضور في الموعد المحدد لإنهاء عملية المراجعة ولن يحق لك المراجعة في حالة التخلف عن الموعد المحدد.
             </p>
 
             <button id="closeReviewModalButton" class="w-full bg-gray-200 text-gray-800 font-bold py-3 px-6 rounded-lg hover:bg-gray-300 transition-colors">
