--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@
                     <div class="flex-shrink-0">
                         <img src="MUST.png" alt="MUST Logo" class="h-16 w-16 md:h-24 md:w-24 object-contain" onerror="this.src='https://placehold.co/100x100/1e3c72/FFFFFF?text=MUST&font=inter'"/>
                     </div>
-                    <div class="ml-4 md:ml-6 flex-grow">
-                        <h1 class="text-lg sm:text-xl md:text-3xl font-bold leading-tight" style="color: #1e3c72;">Misr University for Science and Technology</h1>
-                        <p class="text-xs sm:text-sm md:text-base mt-1" style="color: #2a5298;">Faculty of Oral and Dental Surgery — Fall 2025-2026 PHYS.101 Lab Attendance</p>
+                    <div class="ml-3 md:ml-6 flex-grow">
+                        <h1 class="text-sm sm:text-lg md:text-3xl font-bold leading-tight" style="color: #1e3c72;">Misr University for Science and Technology</h1>
+                        <p class="text-[10px] sm:text-sm md:text-base mt-1 leading-snug" style="color: #2a5298;">Faculty of Oral and Dental Surgery — Fall 2025-2026 PHYS.101 Lab Attendance</p>
                     </div>
                 </div>
 
