--- a/index.html
+++ b/index.html
@@ -196,11 +196,12 @@
                 <!-- Decorative Top Border -->
                 <div class="absolute top-0 left-0 w-full h-1 bg-gradient-to-r from-blue-400 via-indigo-500 to-purple-500"></div>
 
-                <div class="flex items-center mb-8 relative z-10">
+                <!-- UPDATED HEADER LAYOUT: Vertical on mobile, Horizontal on Desktop -->
+                <div class="flex flex-col md:flex-row items-center mb-8 relative z-10 text-center md:text-left">
                     <div class="flex-shrink-0 bg-white p-2 rounded-xl shadow-sm border border-gray-100">
                         <img src="MUST.png" alt="MUST Logo" class="h-16 w-16 md:h-24 md:w-24 object-contain" onerror="this.src='https://placehold.co/100x100/1e3c72/FFFFFF?text=MUST&font=inter'"/>
                     </div>
-                    <div class="ml-4 md:ml-6 flex-grow">
+                    <div class="mt-3 md:mt-0 md:ml-6 flex-grow">
                         <h1 class="text-sm sm:text-lg md:text-3xl font-extrabold leading-tight tracking-tight text-slate-800">Misr University for Science and Technology</h1>
                         <p class="text-[11px] sm:text-sm md:text-base mt-1.5 font-medium text-slate-500">Faculty of Oral and Dental Surgery — Fall 2025-2026 PHYS.101</p>
                     </div>
