Refactor header for better mobile and desktop layout
Updated header structure and added mobile-friendly alignment.

--- a/index.html
+++ b/index.html
@@ -202,8 +202,13 @@
                         <img src="MUST.png" alt="MUST Logo" class="h-16 w-16 md:h-24 md:w-24 object-contain" onerror="this.src='https://placehold.co/100x100/1e3c72/FFFFFF?text=MUST&font=inter'"/>
                     </div>
                     <div class="mt-3 md:mt-0 md:ml-6 flex-grow">
-                        <h1 class="text-sm sm:text-lg md:text-3xl font-extrabold leading-tight tracking-tight text-slate-800">Misr University for Science and Technology</h1>
-                        <p class="text-[11px] sm:text-sm md:text-base mt-1.5 font-medium text-slate-500">Faculty of Oral and Dental Surgery — Fall 2025-2026 PHYS.101</p>
+                        <h1 class="text-sm sm:text-lg md:text-3xl font-extrabold leading-tight tracking-tight text-slate-800 mb-2">Misr University for Science and Technology</h1>
+                        <!-- Added items-center for mobile centering, md:items-start for desktop left align -->
+                        <div class="text-[11px] sm:text-sm md:text-base font-medium text-slate-500 flex flex-col gap-0.5 items-center md:items-start">
+                            <p>Faculty of Oral and Dental Surgery</p>
+                            <p>PHYS.101</p>
+                            <p>Fall 2025-2026</p>
+                        </div>
                     </div>
                 </div>
 
