Adjust crown and text group positions in SVG

--- a/index.html
+++ b/index.html
@@ -919,8 +919,8 @@
                   <circle cx="250" cy="250" r="230" fill="none" stroke="url(#goldGradient)" stroke-width="15" filter="url(#shadow)" />
                   <circle cx="250" cy="250" r="215" fill="none" stroke="#78350F" stroke-width="2" opacity="0.3" />
 
-                  <!-- Crown Group (Centered inside circle) -->
-                  <g transform="translate(125, 40)" filter="url(#shadow)">
+                  <!-- Crown Group (Centered Vertically: Shifted Down) -->
+                  <g transform="translate(125, 80)" filter="url(#shadow)">
                      <path d="M 50 100 L 50 40 L 90 70 L 125 20 L 160 70 L 200 40 L 200 100 Z" fill="url(#goldGradient)" stroke="#B45309" stroke-width="2"/>
                      <!-- Jewels -->
                      <circle cx="50" cy="40" r="6" fill="#FFF"/>
@@ -928,8 +928,8 @@
                      <circle cx="200" cy="40" r="6" fill="#FFF"/>
                   </g>
 
-                  <!-- Text Group (Centered) -->
-                  <g transform="translate(250, 300)" text-anchor="middle" filter="url(#shadow)">
+                  <!-- Text Group (Centered Vertically: Shifted Down) -->
+                  <g transform="translate(250, 340)" text-anchor="middle" filter="url(#shadow)">
                     <text y="0" font-family="serif" font-weight="900" font-size="180" fill="url(#goldGradient)" stroke="#78350F" stroke-width="1.5">10</text>
                     <text y="60" font-family="serif" font-weight="bold" font-size="50" letter-spacing="8" fill="url(#goldGradient)" stroke="#78350F" stroke-width="0.5">TOP</text>
                   </g>
