Change audio file format from mp3 to wav

--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@
 
         function playCelebrationSound() {
             const soundUrl1 = "brass-horn-fanfare-charge-epic-stock-media-1-00-03.mp3";
-            const soundUrl2 = "my_voice.mp3";
+            const soundUrl2 = "my_voice.wav";
             const audioObj1 = new Audio(soundUrl1);
             audioObj1.volume = 0.6;
             const playPromise = audioObj1.play();
